# your-mode-fast-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.build  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_conversation.py
.github/workflows/: deploy.yml
app/: main.py
app/api/: assistant.py
app/schemas/: assistant.py  chat.py  content.py  diagnosis.py
app/services/: assistant_service.py  langchain_service.py
backend/: main.py
backend/api/: assistant.py
backend/schemas/: diagnosis.py
chatbot/: __init__.py  assistant.py  schemas.py
chatbot/agents/: __init__.py  body_diagnosis_agent.py  chat_agent.py  chat_assistant_agent.py  conversation_graph.py  style_content_agent.py
chatbot/api/: chat_agent_api.py  conversation.py
chatbot/config/: config.yaml
chatbot/schemas/: chat.py  content.py
chatbot/utiles/: config_handler.py
chatbot/utils/: config_handler.py  path.py
